clients/ffi/include/tarwyn.h

typedef struct Handle Handle;
int xt_put_double(const struct Handle *handle, const char *channel, double value);
int xt_put_float(const struct Handle *handle, const char *channel, float value);
int xt_put_boolean(const struct Handle *handle, const char *channel, bool value);
int xt_get_string(const struct Handle *handle, const char *channel, char *out, size_t out_len);
int xt_get_integer(const struct Handle *handle, const char *channel, int32_t *out);
int xt_get_long(const struct Handle *handle, const char *channel, int64_t *out);
int xt_get_double(const struct Handle *handle, const char *channel, double *out);