clients/java-client/gen/tarwyn/ffi/tarwyn_h.java


    /**
     * {@snippet lang=c :
     * int xt_put_double(const struct Handle *handle, const char *channel, double value)
     * }
     */
    public static int xt_put_double(MemorySegment handle, MemorySegment channel, double value) {
        var mh$ = xt_put_double.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_put_double", handle, channel, value);
            }
            return (int)mh$.invokeExact(handle, channel, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_put_float {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_FLOAT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_put_float");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_put_float(const struct Handle *handle, const char *channel, float value)
     * }
     */
    public static FunctionDescriptor xt_put_float$descriptor() {
        return xt_put_float.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_put_float(const struct Handle *handle, const char *channel, float value)
     * }
     */
    public static MethodHandle xt_put_float$handle() {
        return xt_put_float.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_put_float(const struct Handle *handle, const char *channel, float value)
     * }
     */
    public static MemorySegment xt_put_float$address() {
        return xt_put_float.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_put_float(const struct Handle *handle, const char *channel, float value)
     * }
     */
    public static int xt_put_float(MemorySegment handle, MemorySegment channel, float value) {
        var mh$ = xt_put_float.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_put_float", handle, channel, value);
            }
            return (int)mh$.invokeExact(handle, channel, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_put_boolean {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_BOOL
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_put_boolean");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_put_boolean(const struct Handle *handle, const char *channel, bool value)
     * }
     */
    public static FunctionDescriptor xt_put_boolean$descriptor() {
        return xt_put_boolean.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_put_boolean(const struct Handle *handle, const char *channel, bool value)
     * }
     */
    public static MethodHandle xt_put_boolean$handle() {
        return xt_put_boolean.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_put_boolean(const struct Handle *handle, const char *channel, bool value)
     * }
     */
    public static MemorySegment xt_put_boolean$address() {
        return xt_put_boolean.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_put_boolean(const struct Handle *handle, const char *channel, bool value)
     * }
     */
    public static int xt_put_boolean(MemorySegment handle, MemorySegment channel, boolean value) {
        var mh$ = xt_put_boolean.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_put_boolean", handle, channel, value);
            }
            return (int)mh$.invokeExact(handle, channel, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_get_string {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_get_string");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_get_string(const struct Handle *handle, const char *channel, char *out, size_t out_len)
     * }
     */
    public static FunctionDescriptor xt_get_string$descriptor() {
        return xt_get_string.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_get_string(const struct Handle *handle, const char *channel, char *out, size_t out_len)
     * }
     */
    public static MethodHandle xt_get_string$handle() {
        return xt_get_string.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_get_string(const struct Handle *handle, const char *channel, char *out, size_t out_len)
     * }
     */
    public static MemorySegment xt_get_string$address() {
        return xt_get_string.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_get_string(const struct Handle *handle, const char *channel, char *out, size_t out_len)
     * }
     */
    public static int xt_get_string(MemorySegment handle, MemorySegment channel, MemorySegment out, long out_len) {
        var mh$ = xt_get_string.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_get_string", handle, channel, out, out_len);
            }
            return (int)mh$.invokeExact(handle, channel, out, out_len);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_get_integer {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_get_integer");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_get_integer(const struct Handle *handle, const char *channel, int32_t *out)
     * }
     */
    public static FunctionDescriptor xt_get_integer$descriptor() {
        return xt_get_integer.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_get_integer(const struct Handle *handle, const char *channel, int32_t *out)
     * }
     */
    public static MethodHandle xt_get_integer$handle() {
        return xt_get_integer.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_get_integer(const struct Handle *handle, const char *channel, int32_t *out)
     * }
     */
    public static MemorySegment xt_get_integer$address() {
        return xt_get_integer.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_get_integer(const struct Handle *handle, const char *channel, int32_t *out)
     * }
     */
    public static int xt_get_integer(MemorySegment handle, MemorySegment channel, MemorySegment out) {
        var mh$ = xt_get_integer.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_get_integer", handle, channel, out);
            }
            return (int)mh$.invokeExact(handle, channel, out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_get_long {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_get_long");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_get_long(const struct Handle *handle, const char *channel, int64_t *out)
     * }
     */
    public static FunctionDescriptor xt_get_long$descriptor() {
        return xt_get_long.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_get_long(const struct Handle *handle, const char *channel, int64_t *out)
     * }
     */
    public static MethodHandle xt_get_long$handle() {
        return xt_get_long.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_get_long(const struct Handle *handle, const char *channel, int64_t *out)
     * }
     */
    public static MemorySegment xt_get_long$address() {
        return xt_get_long.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_get_long(const struct Handle *handle, const char *channel, int64_t *out)
     * }
     */
    public static int xt_get_long(MemorySegment handle, MemorySegment channel, MemorySegment out) {
        var mh$ = xt_get_long.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_get_long", handle, channel, out);
            }
            return (int)mh$.invokeExact(handle, channel, out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_get_double {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_get_double");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_get_double(const struct Handle *handle, const char *channel, double *out)
     * }
     */
    public static FunctionDescriptor xt_get_double$descriptor() {
        return xt_get_double.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_get_double(const struct Handle *handle, const char *channel, double *out)
     * }
     */
    public static MethodHandle xt_get_double$handle() {
        return xt_get_double.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_get_double(const struct Handle *handle, const char *channel, double *out)
     * }
     */
    public static MemorySegment xt_get_double$address() {
        return xt_get_double.ADDR;
    }
